<resources>
    <string name="app_name">Book Store Ineventory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emailHint">E-mail</string>
    <string name="passwordHint">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="SignUp">Sign Up</string>
    <string name="BookStoreInventory">Book Store Inventory</string>
    <string name="Welcome">Welcome</string>
    <string name="WelcomeMessage">This is the Book Store Inventory!</string>
    <string name="Enter">Enter</string>
    <string name="Instructions">Instructions</string>
    <string name="Next">Next</string>
    <string name="InstructionsMessage">You can add a new book or add a book entry.</string>
    <string name="Logout">Logout</string>
    <string name="BookName">BookName</string>
</resources>